OO-3295: update hibernate (v. 5.3.7), dom4j (2.1.1), ActiveMQ, Spring